fix spacing between question title and question stats in question show page

--- a/app/assets/stylesheets/components/question/question.scss
+++ b/app/assets/stylesheets/components/question/question.scss
@@ -60,7 +60,7 @@
     color: $red; 
     font-size: $big-title-size; 
     padding-top: 2rem; 
-    padding-bottom: 2rem; 
+    padding-bottom: 1rem; 
     padding-right: 3rem; 
 }
 
